@@ -7,11 +7,14 @@ import com.github.maracas.roseau.api.model.Annotation;
 import com.github.maracas.roseau.api.model.ClassDecl;
 import com.github.maracas.roseau.api.model.ConstructorDecl;
 import com.github.maracas.roseau.api.model.FieldDecl;
+import com.github.maracas.roseau.api.model.FormalTypeParameter;
 import com.github.maracas.roseau.api.model.InterfaceDecl;
 import com.github.maracas.roseau.api.model.MethodDecl;
 import com.github.maracas.roseau.api.model.Modifier;
+import com.github.maracas.roseau.api.model.ParameterDecl;
 import com.github.maracas.roseau.api.model.SourceLocation;
 import com.github.maracas.roseau.api.model.TypeDecl;
+import com.github.maracas.roseau.api.model.reference.ArrayTypeReference;
 import com.github.maracas.roseau.api.model.reference.ITypeReference;
 import com.github.maracas.roseau.api.model.reference.PrimitiveTypeReference;
 import com.github.maracas.roseau.api.model.reference.TypeReference;
@@ -20,16 +23,14 @@ import com.google.common.collect.Sets;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 import static com.github.maracas.roseau.api.model.AccessModifier.PACKAGE_PRIVATE;
 import static com.github.maracas.roseau.api.model.AccessModifier.PRIVATE;
@@ -46,15 +47,7 @@ import static com.github.maracas.roseau.api.model.Modifier.SYNCHRONIZED;
 
 public class Combinatorial {
 	static final List<AccessModifier> topLevelVisibilities = List.of(PUBLIC, PACKAGE_PRIVATE);
-	static final List<AccessModifier> nestedVisibilities   = List.of(PUBLIC, PROTECTED, PACKAGE_PRIVATE, PRIVATE);
 
-	static final Set<Set<Modifier>> fieldModifiers  = Sets.powerSet(Set.of(STATIC, FINAL));
-	static final Set<Set<Modifier>> methodModifiers = Sets.powerSet(Set.of(STATIC, FINAL, ABSTRACT, NATIVE, DEFAULT, SYNCHRONIZED))
-		.stream()
-		.filter(mods -> !mods.containsAll(Set.of(FINAL, ABSTRACT)))
-		.filter(mods -> !mods.contains(ABSTRACT) || Sets.intersection(mods, Set.of(NATIVE, STATIC, SYNCHRONIZED)).isEmpty())
-		.filter(mods -> !mods.contains(DEFAULT) || Sets.intersection(mods, Set.of(STATIC, ABSTRACT)).isEmpty())
-		.collect(Collectors.toSet());
 	// STATIC handled separately for nested types only
 	static final Set<Set<Modifier>> classModifiers  = Sets.powerSet(Set.of(FINAL, ABSTRACT/*, SEALED, NON_SEALED*/)) // TODO: sealed
 		.stream()
@@ -69,120 +62,158 @@ public class Combinatorial {
 	static final Set<Set<Modifier>> recordModifiers = Sets.powerSet(Set.of(FINAL));
 	static final Set<Set<Modifier>> enumModifiers   = Sets.powerSet(Set.of());
 
-	static final List<ITypeReference> fieldTypes = List.of(new PrimitiveTypeReference("int"));
-	static final List<ITypeReference> methodTypes = List.of(new PrimitiveTypeReference("int"));
+	static final List<ITypeReference> fieldTypes = List.of(
+		new PrimitiveTypeReference("int")/*,
+		new TypeReference<>("java.lang.Integer"),
+		new TypeReference<>("java.lang.String"),
+		new ArrayTypeReference(new PrimitiveTypeReference("int"), 1)*/
+	);
+	static final List<ITypeReference> methodTypes = fieldTypes;
+	static final Set<Set<TypeReference<ClassDecl>>> thrownExceptions = Sets.powerSet(Set.of(TypeReference.EXCEPTION /* No throws for unchecked: TypeReference.RUNTIME_EXCEPTION*/));
 
 	static final int typeHierarchyDepth = 2;
+	static final int typeHierarchyWidth = 2;
 	static final int paramsCount = 1;
 	static final Path dst = Path.of("generated");
 	static int i = 0;
 
-	Map<String, TypeDecl> typeStore = new HashMap<>();
+	Map<String, TypeDeclBuilder> typeStore = new HashMap<>();
 
-	void createInterface() {
-		// Modifiers, visibilities
-		topLevelVisibilities
-			.forEach(visibility -> interfaceModifiers
-				.forEach(modifiers -> IntStream.range(0, typeHierarchyDepth)
-					.forEach(depth -> {
-						var implemented = IntStream.range(0, depth)
-							.mapToObj(i -> newInterface("I" + i, PUBLIC, Collections.emptySet()))
-							.toList();
-
-						var fqn = "I" + i++;
-						var ref = new TypeReference<>(fqn);
-						var intf = new InterfaceDecl(fqn, visibility, toEnumSet(modifiers, Modifier.class), weaveAnnotations(), SourceLocation.NO_LOCATION,
-							implemented, Collections.emptyList(), weaveFields(ref, true), weaveMethods(ref, true), null);
-						typeStore.put(fqn, intf);
-					})
-				)
-			);
+	<T> Set<Set<T>> powerSet(T... elements) {
+		return Sets.powerSet(Set.of(elements));
 	}
 
-	void createClass() {
-		// Modifiers, visibilities
-		topLevelVisibilities
-			.forEach(visibility -> classModifiers
-				.forEach(modifiers -> IntStream.range(0, typeHierarchyDepth)
-					.forEach(depth -> {
-						var implemented = IntStream.range(0, depth)
-							.mapToObj(i -> newInterface("I" + i, PUBLIC, Collections.emptySet()))
-							.toList();
-
-						var fqn = "C" + i++;
-						var ref = new TypeReference<>(fqn);
-						var cls = new ClassDecl(fqn, visibility, toEnumSet(modifiers, Modifier.class), weaveAnnotations(), SourceLocation.NO_LOCATION,
-							implemented, Collections.emptyList(), weaveFields(ref, true), weaveMethods(ref, false), null, null, weaveConstructors());
-						var clsWithSuper = new ClassDecl(fqn, visibility, toEnumSet(modifiers, Modifier.class), weaveAnnotations(), SourceLocation.NO_LOCATION,
-							implemented, Collections.emptyList(), weaveFields(ref, true), weaveMethods(ref, false), null, null, weaveConstructors());
-						typeStore.put(fqn, cls);
-						typeStore.put(fqn, clsWithSuper);
-					})
-				)
-			);
+	Set<AccessModifier> fieldVisibilities(Builder container) {
+		return switch (container) {
+			case InterfaceBuilder i -> Set.of(PUBLIC, PACKAGE_PRIVATE);
+			default -> Set.of(PUBLIC, PROTECTED, PACKAGE_PRIVATE, PRIVATE);
+		};
 	}
 
-	TypeReference<InterfaceDecl> newInterface(String fqn, AccessModifier visibility, Set<Modifier> modifiers) {
-		var ref = new TypeReference<>(fqn);
-		var intf = new InterfaceDecl(fqn, visibility, toEnumSet(modifiers, Modifier.class),
-			weaveAnnotations(), SourceLocation.NO_LOCATION, Collections.emptyList(),
-			Collections.emptyList(), weaveFields(ref, true), weaveMethods(ref, true), null);
-		typeStore.put(fqn, intf);
-		return new TypeReference<>(fqn);
+	Set<AccessModifier> methodVisibilities(Builder container) {
+		return switch (container) {
+			case InterfaceBuilder i -> Set.of(PUBLIC, PACKAGE_PRIVATE, PRIVATE);
+			default -> Set.of(PUBLIC, PROTECTED, PACKAGE_PRIVATE, PRIVATE);
+		};
 	}
 
-	private TypeDecl weaveInnerTypes(TypeDecl type) {
-		return type;
+	Set<Set<Modifier>> fieldModifiers(Builder container) {
+		return switch (container) {
+			default -> powerSet(STATIC, FINAL);
+		};
 	}
 
-	private List<ConstructorDecl> weaveConstructors() {
-		return Collections.emptyList();
+	Set<Set<Modifier>> methodModifiers(Builder container) {
+		var modifiers = powerSet(STATIC, FINAL, ABSTRACT, NATIVE, DEFAULT, SYNCHRONIZED)
+			.stream()
+			.filter(mods -> !mods.containsAll(Set.of(FINAL, ABSTRACT)))
+			.filter(mods -> !mods.contains(ABSTRACT) || Sets.intersection(mods, Set.of(NATIVE, STATIC, SYNCHRONIZED)).isEmpty())
+			.filter(mods -> !mods.contains(DEFAULT) || Sets.intersection(mods, Set.of(STATIC, ABSTRACT)).isEmpty())
+			.collect(Collectors.toSet());
+
+		return switch (container) {
+			case InterfaceBuilder b -> modifiers.stream()
+				.filter(mods -> Sets.intersection(mods, Set.of(NATIVE, SYNCHRONIZED, FINAL)).isEmpty())
+				.collect(Collectors.toSet());
+			case ClassBuilder b -> modifiers.stream()
+				.filter(mods -> !mods.contains(DEFAULT))
+				.filter(mods -> b.make().isAbstract() || !mods.contains(ABSTRACT))
+				.collect(Collectors.toSet());
+			default -> modifiers;
+		};
 	}
 
-	private List<MethodDecl> weaveMethods(TypeReference<TypeDecl> containing, boolean isInterface) {
-		return nestedVisibilities.stream()
-			.flatMap(visibility -> methodModifiers.stream()
-				.flatMap(modifiers -> methodTypes.stream()
-					.flatMap(type -> IntStream.range(0, paramsCount)
-						.mapToObj(pCount -> {
-							if (!isInterface && modifiers.contains(DEFAULT))
-								return Stream.<MethodDecl>empty();
-							if (visibility == PRIVATE && !Sets.intersection(modifiers, Set.of(ABSTRACT, DEFAULT)).isEmpty())
-								return Stream.<MethodDecl>empty();
-							if (isInterface && !Sets.intersection(modifiers, Set.of(NATIVE, SYNCHRONIZED, FINAL)).isEmpty())
-								return Stream.<MethodDecl>empty();
-							if (isInterface && (visibility == PROTECTED || visibility == PACKAGE_PRIVATE))
-								return Stream.<MethodDecl>empty();
-
-							return Stream.of(new MethodDecl("%s.%s%s%s".formatted(containing.getQualifiedName(), visibility, modifiers.stream().map(Modifier::toString).collect(Collectors.joining("")), type),
-								visibility, toEnumSet(modifiers, Modifier.class), Collections.emptyList(), SourceLocation.NO_LOCATION,
-								containing, TypeReference.OBJECT, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()));
-						})
-					)
-				)
-			).flatMap(Function.identity()).toList();
+	void createTypes() {
+		createInterfaces();
+		createClasses();
 	}
 
-	private List<Annotation> weaveAnnotations() {
-		return Collections.emptyList();
+	void createInterfaces() {
+		topLevelVisibilities.forEach(visibility ->
+			interfaceModifiers.forEach(modifiers -> {
+				var builder = new InterfaceBuilder();
+				builder.qualifiedName = "I" + ++i;
+				builder.visibility = visibility;
+				builder.modifiers = toEnumSet(modifiers, Modifier.class);
+				store(builder);
+
+				// [O, 1, N]?
+				IntStream.range(0, typeHierarchyWidth).forEach(intf -> {
+					var superBuilder = new InterfaceBuilder();
+					superBuilder.qualifiedName = "I" + ++i;
+					superBuilder.visibility = visibility;
+					superBuilder.modifiers = toEnumSet(modifiers, Modifier.class);
+					builder.implementedInterfaces.add(new TypeReference<>(superBuilder.qualifiedName));
+					store(superBuilder);
+				});
+			})
+		);
 	}
 
-	private List<FieldDecl> weaveFields(TypeReference<TypeDecl> containing, boolean isInterface) {
-		return nestedVisibilities.stream()
-			.flatMap(visibility -> fieldModifiers.stream()
-				.flatMap(modifiers -> fieldTypes.stream()
-					.flatMap(type -> {
-						if (isInterface)
-							if (visibility == PROTECTED || visibility == PRIVATE)
-								return Stream.empty();
+	void createClasses() {
+		topLevelVisibilities.forEach(visibility ->
+			classModifiers.forEach(modifiers -> {
+				var builder = new ClassBuilder();
+				builder.qualifiedName = "C" + ++i;
+				builder.visibility = visibility;
+				builder.modifiers = toEnumSet(modifiers, Modifier.class);
+				store(builder);
+			})
+		);
+	}
 
-						return Stream.of(new FieldDecl("%s.%s%s%s".formatted(containing.getQualifiedName(), visibility, modifiers.stream().map(Modifier::toString).collect(Collectors.joining("")), type),
-							visibility, toEnumSet(modifiers, Modifier.class),
-							Collections.emptyList(), SourceLocation.NO_LOCATION, containing, type));
+	private void weaveFields() {
+		typeStore.forEach((fqn, t) ->
+			fieldVisibilities(t).stream().forEach(visibility ->
+				fieldModifiers(t).stream().forEach(modifiers ->
+					fieldTypes.stream().forEach(type -> {
+						var builder = new FieldBuilder();
+						builder.qualifiedName = t.qualifiedName + ".f" + ++i;
+						builder.visibility = visibility;
+						builder.modifiers = toEnumSet(modifiers, Modifier.class);
+						builder.type = type;
+						builder.containingType = new TypeReference<>(t.qualifiedName);
+						t.fields.add(builder.make());
 					})
 				)
 			)
-			.toList();
+		);
+	}
+
+	void weaveMethods() {
+		typeStore.forEach((fqn, t) ->
+			methodVisibilities(t).stream().forEach(visibility ->
+				methodModifiers(t).stream().forEach(modifiers ->
+					methodTypes.stream().forEach(type ->
+						thrownExceptions.stream().forEach(exc ->
+							IntStream.range(0, paramsCount + 1).forEach(pCount -> {
+								/* vis/mod interactions are annoying; don't want them there */
+								if (visibility == PRIVATE && !Sets.intersection(modifiers, Set.of(DEFAULT, ABSTRACT)).isEmpty())
+									return;
+
+								var builder = new MethodBuilder();
+								builder.qualifiedName = t.qualifiedName + ".m" + ++i;
+								builder.visibility = visibility;
+								builder.modifiers = toEnumSet(modifiers, Modifier.class);
+								builder.type = type;
+								builder.containingType = new TypeReference<>(t.qualifiedName);
+								builder.thrownExceptions = exc.stream().toList();
+								IntStream.range(0, pCount).forEach(p -> {
+									// TODO: varargs
+									// TODO: parameter types
+									builder.parameters.add(new ParameterDecl("p" + p, TypeReference.OBJECT, false));
+								});
+								t.methods.add(builder.make());
+							})
+						)
+					)
+				)
+			)
+		);
+	}
+
+	void store(TypeDeclBuilder type) {
+		typeStore.put(type.qualifiedName, type);
 	}
 
 	private <T extends Enum<T>> EnumSet<T> toEnumSet(Set<T> set, Class<T> cls) {
@@ -211,15 +242,77 @@ public class Combinatorial {
 	}
 
 	public API getAPI() {
-		return new API(typeStore.values().stream().toList(), new SpoonAPIFactory());
+		return new API(typeStore.values().stream().map(TypeDeclBuilder::make).toList(), new SpoonAPIFactory());
 	}
 
 	public static void main(String[] args) {
 		var comb = new Combinatorial();
-		comb.createInterface();
-		comb.createClass();
+		comb.createTypes();
+		comb.weaveFields();
+		comb.weaveMethods();
 		var api = comb.getAPI();
 		System.out.println("api="+api);
 		comb.generateCode(api);
+	}
+
+	/* ... */
+	interface Builder { TypeDecl make(); }
+	class SymbolBuilder {
+		String qualifiedName;
+		AccessModifier visibility;
+		EnumSet<Modifier> modifiers = EnumSet.noneOf(Modifier.class);
+		List<Annotation> annotations = new ArrayList<>();
+		SourceLocation location = SourceLocation.NO_LOCATION;
+	}
+
+	abstract class TypeDeclBuilder extends SymbolBuilder implements Builder {
+		List<TypeReference<InterfaceDecl>> implementedInterfaces = new ArrayList<>();
+		List<FormalTypeParameter> formalTypeParameters = new ArrayList<>();
+		List<FieldDecl> fields = new ArrayList<>();
+		List<MethodDecl> methods = new ArrayList<>();
+		TypeReference<TypeDecl> enclosingType;
+	}
+
+	class InterfaceBuilder extends TypeDeclBuilder {
+		public InterfaceDecl make() {
+			return new InterfaceDecl(qualifiedName, visibility, modifiers, annotations, location,
+				implementedInterfaces, formalTypeParameters, fields, methods, enclosingType);
+		}
+	}
+
+	class ClassBuilder extends TypeDeclBuilder {
+		TypeReference<ClassDecl> superClass;
+		List<ConstructorDecl> constructors = new ArrayList<>();
+
+		public ClassDecl make() {
+			return new ClassDecl(qualifiedName, visibility, modifiers, annotations, location,
+				implementedInterfaces, formalTypeParameters, fields, methods, enclosingType, superClass,
+				constructors);
+		}
+	}
+
+	class TypeMemberBuilder extends SymbolBuilder {
+		TypeReference<TypeDecl> containingType;
+		ITypeReference type;
+	}
+
+	class FieldBuilder extends TypeMemberBuilder {
+		FieldDecl make() {
+			return new FieldDecl(qualifiedName, visibility, modifiers, annotations, location,
+				containingType, type);
+		}
+	}
+
+	class ExecutableBuilder extends TypeMemberBuilder {
+		List<ParameterDecl> parameters = new ArrayList<>();
+		List<FormalTypeParameter> formalTypeParameters = new ArrayList<>();
+		List<TypeReference<ClassDecl>> thrownExceptions = new ArrayList<>();
+	}
+
+	class MethodBuilder extends ExecutableBuilder {
+		MethodDecl make() {
+			return new MethodDecl(qualifiedName, visibility, modifiers, annotations, location,
+				containingType, type, parameters, formalTypeParameters, thrownExceptions);
+		}
 	}
 }
